bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:5: error: ';' expected but 'else' found.
  else
  ^